<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_menu"
        android:title="@string/home"
        android:icon="@drawable/ic_menu_share"/>

    <item
        android:id="@+id/inspection_menu"
        android:title="@string/inspection"
        android:icon="@drawable/ic_menu_share"/>

    <item
        android:id="@+id/grading_menu"
        android:title="@string/grading"
        android:icon="@drawable/ic_menu_share"/>

    <item
        android:id="@+id/history_menu"
        android:title="@string/history"
        android:icon="@drawable/ic_menu_share"/>

    <item
        android:id="@+id/settings_menu"
        android:title="@string/settings"
        android:icon="@drawable/ic_menu_share"/>
</menu>